--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
         <img src="images/text_01.png" class="top_text_01 swivelChair" />
         <img src="images/text_02.png" class="top_text_02 rock" />
         <img src="images/decorate_01.png" class="decorate" />
-        <img src="images/decorate_02.png" class="decorate" />
+        <img src="images/decorate_02.png" class="decorate_flash" />
+        <img src="images/door.png" class="decorate" />
+        <div id="door" class="door"></div>
+    </section>
+    <section id="page_02" class="page_02">
+        <img src="images/left_top_02.png" class="left_top_01" />
+        <img src="images/logo.png"  class="decorate" />
+        <img src="images/decorate_01.png"  class="decorate" />
+        <img src="images/decorate_03.png" class="decorate" />
+        <img src="images/decorate_04.png" class="decorate_flash" />
     </section>
     <script src="js/imgLoader.js"></script>
     <script src="js/index.js"></script>
